--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@babylonjs/core": "^8.12.1",
     "@babylonjs/loaders": "^8.12.1",
     "@babylonjs/materials": "^8.12.1",
+    "@tailwindcss/vite": "^4.1.10",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
