--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@babylonjs/core": "^8.12.1",
     "@babylonjs/loaders": "^8.12.1",
     "@babylonjs/materials": "^8.12.1",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
