--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm ci
       - run: npm run build
         env:
-          PUBLIC_URL: "/3d-modeling-for-kids/"
+          ASSET_URL: "/3d-modeling-for-kids/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
